--- a/api/.env
+++ b/api/.env
@@ -3,31 +3,13 @@ NODE_ENV=development
 
 
 # Auth
-APP_SECRET=3dc9016b34c2e52cea6217878f24ec40
+APP_SECRET= SECREDO AQUI
 
 # Postgres
 
-DB_HOST=18.228.241.53
+DB_HOST=localhost
 DB_USER=postgres
-DB_PASS=Sqaw03a2605
-DB_NAME=operacional
+DB_PASS=docker
+DB_NAME=
 
-# Mongo
 
-MONGO_URL=
-
-# Redis
-
-REDIS_HOST=
-REDIS_POST=
-
-# Mail (mailtrap)
-
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USER=
-MAIL_PASS=
-
-# Sentry
-
-SENTRY_DSN=
